--- a/pages/components/index.html
+++ b/pages/components/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="refresh"
+      content="0; url=/pages/Getting-Started/usage.html"
+    />
     <title>Starling UI - Rohit Gaur</title>
   </head>
   <body></body>
