--- a/pages/components/avatar/avatar.html
+++ b/pages/components/avatar/avatar.html
@@ -37,18 +37,22 @@
         Instructions to import the Avatar component in your CSS or HTML:
       </p>
 
-      <iframe
-        src="https://carbon.now.sh/embed?bg=rgba%28171%2C+184%2C+195%2C+1%29&t=shades-of-purple&wt=none&l=auto&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%252F%252F%2520CSS%250A%2540import%2520url%28%2522https%253A%252F%252Fstarlingui.netlify.app%252Fpages%252Fcomponents%252Favatar%252Favatar.css%2522%29%253B%250A%250A%252F%252F%2520HTML%250A%253Clink%2520rel%253D%2522stylesheet%2522%2520href%253D%2522https%253A%252F%252Fstarlingui.netlify.app%252Fpages%252Fcomponents%252Favatar%252Favatar.css%2522%253E"
-        style="
-          width: 848px;
-          height: auto;
-          border: 0;
-          transform: scale(1);
-          overflow: scroll;
-        "
-        sandbox="allow-scripts allow-same-origin"
-      >
-      </iframe>
+      <div class="iframe_wrapper">
+        <code>
+          <iframe
+            src="https://carbon.now.sh/embed/nPRJTnWQQZ0H20RD6rzZ"
+            style="
+              width: 760px;
+              height: 170px;
+              border: 0;
+              transform: scale(1);
+              overflow: hidden;
+            "
+            sandbox="allow-scripts allow-same-origin"
+          >
+          </iframe>
+        </code>
+      </div>
 
       <!-- PROFILE AVATAR -->
       <h2 class="sui_doc_subtitle">Profile Avatar</h2>
@@ -82,31 +86,21 @@
         </div>
       </div>
 
-      <div class="flex">
-        <iframe
-          src="https://carbon.now.sh/embed?bg=rgba%28171%2C+184%2C+195%2C+1%29&t=shades-of-purple&wt=none&l=auto&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%252F%252F%2520XXL%2520Size%250A%253Cdiv%2520class%253D%2522sui_avatar%2520av_xxl%2522%253E%250A%2520%2520%253Cimg%2520src%253D%2522..%2522%2520alt%253D%2522..%2522%2520%252F%253E%250A%253C%252Fdiv%253E"
-          style="
-            width: 300px;
-            height: auto;
-            border: 0;
-            transform: scale(1);
-            overflow: scroll;
-          "
-          sandbox="allow-scripts allow-same-origin"
-        >
-        </iframe>
-        <iframe
-          src="https://carbon.now.sh/embed?bg=rgba%28171%2C+184%2C+195%2C+1%29&t=shades-of-purple&wt=none&l=auto&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%252F%252F%2520XS%2520Size%250A%253Cdiv%2520class%253D%2522sui_avatar%2520av_xs%2522%253E%250A%2520%2520%253Cimg%2520src%253D%2522..%2522%2520alt%253D%2522..%2522%2520%252F%253E%250A%253C%252Fdiv%253E"
-          style="
-            width: 291px;
-            height: auto;
-            border: 0;
-            transform: scale(1);
-            overflow: scroll;
-          "
-          sandbox="allow-scripts allow-same-origin"
-        >
-        </iframe>
+      <div class="iframe_wrapper">
+        <code>
+          <iframe
+            src="https://carbon.now.sh/embed/CYU5ZjUmb9O8Pg8346cC"
+            style="
+              width: 272px;
+              height: 230px;
+              border: 0;
+              transform: scale(1);
+              overflow: hidden;
+            "
+            sandbox="allow-scripts allow-same-origin"
+          >
+          </iframe>
+        </code>
       </div>
 
       <!-- SQUARE AVATAR -->
@@ -142,31 +136,22 @@
           <img src="/assets/avatars/av3.svg" alt="" />
         </div>
       </div>
-      <div class="flex">
-        <iframe
-          src="https://carbon.now.sh/embed?bg=rgba%28221%2C228%2C235%2C1%29&t=shades-of-purple&wt=none&l=auto&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%252F%252F%2520Square%2520%257C%2520XL%2520Size%250A%253Cdiv%2520class%253D%2522sui_avatar%2520av_xl%2520av_square%2522%253E%250A%2520%2520%253Cimg%2520src%253D%2522..%2522%2520alt%253D%2522..%2522%2520%252F%253E%250A%253C%252Fdiv%253E"
-          style="
-            width: 360px;
-            height: auto;
-            border: 0;
-            transform: scale(1);
-            overflow: scroll;
-          "
-          sandbox="allow-scripts allow-same-origin"
-        >
-        </iframe>
-        <iframe
-          src="https://carbon.now.sh/embed?bg=rgba%28221%2C228%2C235%2C1%29&t=shades-of-purple&wt=none&l=auto&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%252F%252F%2520Square%2520%257C%2520XS%2520Size%250A%253Cdiv%2520class%253D%2522sui_avatar%2520av_xs%2520av_square%2522%253E%250A%2520%2520%253Cimg%2520src%253D%2522..%2522%2520alt%253D%2522..%2522%2520%252F%253E%250A%253C%252Fdiv%253E"
-          style="
-            width: 360px;
-            height: auto;
-            border: 0;
-            transform: scale(1);
-            overflow: hidden;
-          "
-          sandbox="allow-scripts allow-same-origin"
-        >
-        </iframe>
+
+      <div class="iframe_wrapper">
+        <code>
+          <iframe
+            src="https://carbon.now.sh/embed/oaDUl3D4Ho7pJI67Cy7L"
+            style="
+              width: 339px;
+              height: 240px;
+              border: 0;
+              transform: scale(1);
+              overflow: hidden;
+            "
+            sandbox="allow-scripts allow-same-origin"
+          >
+          </iframe>
+        </code>
       </div>
 
       <!-- TEXT AVATAR -->
@@ -188,31 +173,22 @@
           <h2>SG</h2>
         </div>
       </div>
-      <div class="flex">
-        <iframe
-          src="https://carbon.now.sh/embed?bg=rgba%28221%2C228%2C235%2C1%29&t=shades-of-purple&wt=none&l=auto&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%252F%252F%2520Profile%2520%257C%2520XXL%2520%257C%2520Text%2520%257C%2520V1%2520Color%250A%253Cdiv%2520class%253D%2522sui_avatar%2520av_xxl%2520av_txt%2520sui_v1%2522%253E%250A%2520%2520%253Ch2%253ERG%253C%252Fh2%253E%250A%253C%252Fdiv%253E"
-          style="
-            width: 402px;
-            height: auto;
-            border: 0;
-            transform: scale(1);
-            overflow: scroll;
-          "
-          sandbox="allow-scripts allow-same-origin"
-        >
-        </iframe>
-        <iframe
-          src="https://carbon.now.sh/embed?bg=rgba%28221%2C228%2C235%2C1%29&t=shades-of-purple&wt=none&l=auto&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%252F%252F%2520Square%2520%257C%2520XL%2520%257C%2520Text%2520%257C%2520V2%2520Color%250A%253Cdiv%2520class%253D%2522sui_avatar%2520av_xl%2520av_txt%2520av_square%2520sui_v2%2522%253E%250A%2520%2520%253Ch2%253EAL%253C%252Fh2%253E%250A%253C%252Fdiv%253E"
-          style="
-            width: 478px;
-            height: auto;
-            border: 0;
-            transform: scale(1);
-            overflow: scroll;
-          "
-          sandbox="allow-scripts allow-same-origin"
-        >
-        </iframe>
+
+      <div class="iframe_wrapper">
+        <code>
+          <iframe
+            src="https://carbon.now.sh/embed/jhQye0TObexSQ6aov6DJ"
+            style="
+              width: 444px;
+              height: 224px;
+              border: 0;
+              transform: scale(1);
+              overflow: hidden;
+            "
+            sandbox="allow-scripts allow-same-origin"
+          >
+          </iframe>
+        </code>
       </div>
     </main>
     <script src="/pages/nav.js"></script>
