--- a/pages/components/badge/badge.html
+++ b/pages/components/badge/badge.html
@@ -36,18 +36,23 @@
       <p class="sui_doc_p">
         Instructions to import the Badge component in your CSS or HTML:
       </p>
-      <iframe
-        src="https://carbon.now.sh/embed?bg=rgba%28171%2C+184%2C+195%2C+1%29&t=shades-of-purple&wt=none&l=auto&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%252F%252F%2520CSS%250A%2540import%2520url%28%2522https%253A%252F%252Fstarlingui.netlify.app%252Fpages%252Fcomponents%252Fbadge%252Fbadge.css%2522%29%253B%250A%250A%252F%252F%2520HTML%250A%253Clink%2520rel%253D%2522stylesheet%2522%2520href%253D%2522https%253A%252F%252Fstarlingui.netlify.app%252Fpages%252Fcomponents%252Fbadge%252Fbadge.css%2522%253E"
-        style="
-          width: 830px;
-          height: auto;
-          border: 0;
-          transform: scale(1);
-          overflow: scroll;
-        "
-        sandbox="allow-scripts allow-same-origin"
-      >
-      </iframe>
+
+      <div class="iframe_wrapper">
+        <code>
+          <iframe
+            src="https://carbon.now.sh/embed/fvQeJu6tdQSW2kS9oXnM"
+            style="
+              width: 746px;
+              height: 160px;
+              border: 0;
+              transform: scale(1);
+              overflow: hidden;
+            "
+            sandbox="allow-scripts allow-same-origin"
+          >
+          </iframe>
+        </code>
+      </div>
 
       <!-- STATUS & ICON BADGE -->
       <h2 class="sui_doc_subtitle">Status & Icon Badge</h2>
@@ -90,31 +95,22 @@
           <div class="bd_num bd_red">8</div>
         </div>
       </div>
-      <div class="flex">
-        <iframe
-          src="https://carbon.now.sh/embed?bg=rgba%28221%2C228%2C235%2C1%29&t=shades-of-purple&wt=none&l=auto&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522sui_avatar%2520av_xl%2522%253E%250A%2520%2520%253Cimg%2520src%253D%2522..%2522%2520alt%253D%2522..%2522%2520%252F%253E%250A%2520%2520%252F%252F%2520Left%2520position%2520%257C%2520XL%2520size%2520%257C%2520Red%2520color%250A%2520%2520%253Ci%2520class%253D%2522av_badge%2520bd_left%2520bd_xl%2520bd_red%2522%253E%253C%252Fi%253E%250A%253C%252Fdiv%253E"
-          style="
-            width: 434px;
-            height: auto;
-            border: 0;
-            transform: scale(1);
-            overflow: scroll;
-          "
-          sandbox="allow-scripts allow-same-origin"
-        >
-        </iframe>
-        <iframe
-          src="https://carbon.now.sh/embed?bg=rgba%28221%2C228%2C235%2C1%29&t=shades-of-purple&wt=none&l=auto&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522sui_avatar%2522%253E%250A%2520%2520%253Cimg%2520src%253D%2522..%2522%2520alt%253D%2522..%2522%2520%252F%253E%250A%2520%2520%252F%252F%2520Top-Right%2520position%2520%257C%2520Red%2520color%250A%2520%2520%253Cdiv%2520class%253D%2522bd_num%2520bd_red%2522%253E8%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
-          style="
-            width: 342px;
-            height: auto;
-            border: 0;
-            transform: scale(1);
-            overflow: scroll;
-          "
-          sandbox="allow-scripts allow-same-origin"
-        >
-        </iframe>
+
+      <div class="iframe_wrapper">
+        <code>
+          <iframe
+            src="https://carbon.now.sh/embed/7aSu22X9wrtUtsMQ8oPD"
+            style="
+              width: 392px;
+              height: 280px;
+              border: 0;
+              transform: scale(1);
+              overflow: hidden;
+            "
+            sandbox="allow-scripts allow-same-origin"
+          >
+          </iframe>
+        </code>
       </div>
 
       <!-- SQUARE STATUS BADGE -->
@@ -144,31 +140,22 @@
           <i class="av_badge bd_s bd_green"></i>
         </div>
       </div>
-      <div class="flex">
-        <iframe
-          src="https://carbon.now.sh/embed?bg=rgba%28221%2C228%2C235%2C1%29&t=shades-of-purple&wt=none&l=auto&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522sui_avatar%2520av_xl%2520av_square%2522%253E%250A%2520%2520%253Cimg%2520src%253D%2522..%2522%2520alt%253D%2522..%2522%2520%252F%253E%250A%2520%2520%252F%252F%2520Left%2520position%2520%257C%2520XL%2520size%2520%257C%2520Red%2520color%250A%2520%2520%253Ci%2520class%253D%2522av_badge%2520bd_left%2520bd_xl%2520bd_red%2522%253E%253C%252Fi%253E%250A%253C%252Fdiv%253E"
-          style="
-            width: 434px;
-            height: auto;
-            border: 0;
-            transform: scale(1);
-            overflow: scroll;
-          "
-          sandbox="allow-scripts allow-same-origin"
-        >
-        </iframe>
-        <iframe
-          src="https://carbon.now.sh/embed?bg=rgba%28221%2C228%2C235%2C1%29&t=shades-of-purple&wt=none&l=auto&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522sui_avatar%2520av_l%2520av_square%2522%253E%250A%2520%2520%253Cimg%2520src%253D%2522..%2522%2520alt%253D%2522..%2522%2520%252F%253E%250A%2520%2520%252F%252F%2520L%2520size%2520%257C%2520Gray%2520color%250A%2520%2520%253Ci%2520class%253D%2522av_badge%2520bd_l%2520bd_gray%2522%253E%253C%252Fi%253E%250A%253C%252Fdiv%253E"
-          style="
-            width: 367px;
-            height: auto;
-            border: 0;
-            transform: scale(1);
-            overflow: scroll;
-          "
-          sandbox="allow-scripts allow-same-origin"
-        >
-        </iframe>
+
+      <div class="iframe_wrapper">
+        <code>
+          <iframe
+            src="https://carbon.now.sh/embed/iWvme5jRomMpAi4z6Hhx"
+            style="
+              width: 392px;
+              height: 280px;
+              border: 0;
+              transform: scale(1);
+              overflow: hidden;
+            "
+            sandbox="allow-scripts allow-same-origin"
+          >
+          </iframe>
+        </code>
       </div>
     </main>
     <script src="/pages/nav.js"></script>
