--- a/pages/nav.css
+++ b/pages/nav.css
@@ -60,7 +60,8 @@ nav {
   background: linear-gradient(to right, var(--PRIMARY-M2) 49%, transparent 0);
   background-size: 200% 100%;
   background-position: right;
-  transition: background-position 0.3s;
+  -webkit-transition: background-position 0.5s;
+  transition: background-position 0.5s;
 }
 .starling_nav_item:hover {
   background: linear-gradient(to right, var(--PRIMARY-M2) 50%, transparent 0);
