--- a/pages/components/button/button.html
+++ b/pages/components/button/button.html
@@ -32,6 +32,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="/utils/prism.css" />
   </head>
   <body>
     <header></header>
@@ -45,21 +46,17 @@
         Instructions to import the Button component in your CSS or HTML:
       </p>
 
-      <div class="iframe_wrapper">
-        <code>
-          <iframe
-            src="https://carbon.now.sh/embed/0nzblAFml15HBYUnL8DD"
-            style="
-              width: 770px;
-              height: 195px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
-        </code>
+      <div class="code_wrapper">
+        <script type="text/plain" class="line-numbers language-css">
+          // CSS
+          @import url("https://starlingui.netlify.app/utils/color.css");
+          @import url("https://starlingui.netlify.app/pages/components/button/button.css");
+        </script>
+        <script type="text/plain" class="line-numbers language-html">
+          // HTML
+          <link rel="stylesheet" href="https://starlingui.netlify.app/utils/color.css">
+          <link rel="stylesheet" href="https://starlingui.netlify.app/pages/components/button/button.css">
+        </script>
       </div>
 
       <!-- Standard Buttons START -->
@@ -72,21 +69,13 @@
         <button class="sui_btn btn_v3">Standard Variant 3</button>
       </div>
 
-      <div class="iframe_wrapper">
-        <code>
-          <iframe
-            src="https://carbon.now.sh/embed/PI3A1VGJVPmJynkkcOCF"
-            style="
-              width: 480px;
-              height: 150px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
-        </code>
+      <div class="code_wrapper">
+        <script type="text/plain" class="line-numbers language-markup">
+          <button class="sui_btn">Standard Button</button>
+          <button class="sui_btn btn_v1">Standard Variant 1</button>
+          <button class="sui_btn btn_v2">Standard Variant 2</button>
+          <button class="sui_btn btn_v3">Standard Variant 3</button>
+        </script>
       </div>
       <!-- Standard Buttons END -->
 
@@ -100,21 +89,13 @@
         <button class="sui_btn btn_rnd btn_v3">Rounded Variant 3</button>
       </div>
 
-      <div class="iframe_wrapper">
-        <code>
-          <iframe
-            src="https://carbon.now.sh/embed/Z8l7Rbpy2RNSX7yeI1SI"
-            style="
-              width: 535px;
-              height: 150px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
-        </code>
+      <div class="code_wrapper">
+        <script type="text/plain" class="line-numbers language-markup">
+          <button class="sui_btn btn_rnd">Rounded Button</button>
+          <button class="sui_btn btn_rnd btn_v1">Rounded Variant 1</button>
+          <button class="sui_btn btn_rnd btn_v2">Rounded Variant 2</button>
+          <button class="sui_btn btn_rnd btn_v3">Rounded Variant 3</button>
+        </script>
       </div>
       <!-- Rounded Buttons END -->
 
@@ -130,21 +111,13 @@
         <button class="sui_btn btn_rnd btn_fill btn_v3">Rounded Fill V3</button>
       </div>
 
-      <div class="iframe_wrapper">
-        <code>
-          <iframe
-            src="https://carbon.now.sh/embed/8IrvlcP7bNPM9jTsNd0h"
-            style="
-              width: 585px;
-              height: 150px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
-        </code>
+      <div class="code_wrapper">
+        <script type="text/plain" class="line-numbers language-markup">
+          <button class="sui_btn btn_rnd btn_fill">Rounded Fill Button</button>
+          <button class="sui_btn btn_rnd btn_fill btn_v1">Rounded Fill V1</button>
+          <button class="sui_btn btn_rnd btn_fill btn_v2">Rounded Fill V2</button>
+          <button class="sui_btn btn_rnd btn_fill btn_v3">Rounded Fill V3</button>
+        </script>
       </div>
       <!-- Rounded Fill Buttons END -->
 
@@ -160,21 +133,13 @@
         <button class="sui_btn btn_outline btn_v3">Outline Variant 3</button>
       </div>
 
-      <div class="iframe_wrapper">
-        <code>
-          <iframe
-            src="https://carbon.now.sh/embed/0ul4IWPzFhjhRvTGRc05"
-            style="
-              width: 565px;
-              height: 150px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
-        </code>
+      <div class="code_wrapper">
+        <script type="text/plain" class="line-numbers language-markup">
+          <button class="sui_btn btn_outline">Outline Button</button>
+          <button class="sui_btn btn_outline btn_v1">Outline Variant 1</button>
+          <button class="sui_btn btn_outline btn_v2">Outline Variant 2</button>
+          <button class="sui_btn btn_outline btn_v3">Outline Variant 3</button>
+        </script>
       </div>
       <!-- Outline Buttons END -->
 
@@ -196,21 +161,13 @@
         </button>
       </div>
 
-      <div class="iframe_wrapper">
-        <code>
-          <iframe
-            src="https://carbon.now.sh/embed/3RvIiahdogbEYTZ4FEuK"
-            style="
-              width: 630px;
-              height: 160px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
-        </code>
+      <div class="code_wrapper">
+        <script type="text/plain" class="line-numbers language-markup">
+          <button class="sui_btn btn_outline btn_rnd">Outline Rounded Button</button>
+          <button class="sui_btn btn_outline btn_rnd btn_v1">Outline Rounded V1</button>
+          <button class="sui_btn btn_outline btn_rnd btn_v2">Outline Rounded V2</button>
+          <button class="sui_btn btn_outline btn_rnd btn_v3">Outline Rounded V3</button>
+        </script>
       </div>
       <!-- Outline Rounded Buttons END -->
 
@@ -234,26 +191,20 @@
         </button>
       </div>
 
-      <div class="iframe_wrapper">
-        <code>
-          <iframe
-            src="https://carbon.now.sh/embed/R7hAFbvohgN3WI8GjW8i"
-            style="
-              width: 735px;
-              height: 160px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
-        </code>
+      <div class="code_wrapper">
+        <script type="text/plain" class="line-numbers language-markup">
+          <button class="sui_btn btn_outline btn_rnd btn_fill">Outline Rounded Fill</button>
+          <button class="sui_btn btn_outline btn_rnd btn_fill btn_v1">Outline Rounded Fill V1</button>
+          <button class="sui_btn btn_outline btn_rnd btn_fill btn_v2">Outline Rounded Fill V2</button>
+          <button class="sui_btn btn_outline btn_rnd btn_fill btn_v3">Outline Rounded Fill V3</button>
+        </script>
       </div>
       <!-- Outline Rounded  Fill Buttons END -->
 
       <!-- Text and Buttons with Icon START -->
-      <h2 class="sui_doc_subtitle">Text, Floating button and button with Icon</h2>
+      <h2 class="sui_doc_subtitle">
+        Text, Floating button and button with Icon
+      </h2>
       <p class="sui_doc_p">icon can be used in all types of button:</p>
       <p class="sui_doc_p">
         PS: <a href="https://fontawesome.com/" class="btn_txt">Font Awesome</a>
@@ -285,24 +236,42 @@
         </button>
       </div>
 
-      <div class="iframe_wrapper">
-        <code>
-          <iframe
-            src="https://carbon.now.sh/embed/74cJtezeaemOuejTeoAn"
-            style="
-              width: 440px;
-              height: 565px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
-        </code>
+      <div class="code_wrapper">
+        <script type="text/plain" class="line-numbers language-markup">
+          <button class="sui_btn btn_txt">Text Button</button>
+
+          <button class="sui_btn">
+            <i class="fas fa-shopping-cart"></i>
+          </button>
+
+          <button class="sui_btn">
+            <i class="btn_icon fas fa-shopping-cart"></i>
+            Add to Cart
+          </button>
+
+          <button class="sui_btn btn_rnd btn_v1">
+            <i class="btn_icon fas fa-shopping-cart"></i>
+            Add to Cart
+          </button>
+
+          <button class="sui_btn btn_rnd btn_fill btn_v2">
+            <i class="btn_icon fas fa-shopping-cart"></i>
+            Add to Cart
+          </button>
+
+          <button class="sui_btn btn_rnd btn_outline btn_v3">
+            <i class="btn_icon fas fa-shopping-cart"></i>
+            Add to Cart
+          </button>
+
+          <button class="sui_btn_float">
+            <i class="fas fa-comments"></i>
+          </button>
+        </script>
       </div>
       <!-- Text and Buttons with Icon END -->
     </main>
+    <script src="/utils/prism.js"></script>
     <script src="/pages/nav.js"></script>
   </body>
 </html>
