--- a/utils/color.css
+++ b/utils/color.css
@@ -39,6 +39,11 @@
   --PRICE-OFFER: red;
 
   --CARBON: #2d2b55;
+
+  --CODE-ORANGE: #ff9d00;
+  --CODE-BLUE: #9effff;
+  --CODE-GREEN: #a5ff90;
+  --CODE-COMMENT: #b362ff;
 }
 .sui_v1 {
   background: var(--VARIANT-1);
