--- a/pages/style.css
+++ b/pages/style.css
@@ -1,5 +1,6 @@
 @import url("/utils/reset.css");
 @import url("/utils/color.css");
+@import url("/utils/prism.css");
 @import url("/pages/nav.css");
 @import url("/pages/components/button/button.css");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css");
