--- a/pages/nav.css
+++ b/pages/nav.css
@@ -50,14 +50,15 @@ nav {
   align-items: center;
   gap: 2px;
   grid-area: nav;
-  margin: 0 4rem;
+  margin: 0 3rem;
   padding-top: 4rem;
   font-size: 1.6rem;
   position: relative;
 }
 main {
   grid-area: main;
-  margin: 3rem 0 0 5rem;
+  margin: 4rem 0;
+  padding: 0 5%;
   overflow-y: scroll;
   overflow-x: hidden;
   position: relative;
@@ -100,7 +101,7 @@ main {
   position: absolute;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 768px) {
   body {
     grid-template-areas:
       "header"
@@ -110,13 +111,13 @@ main {
   nav {
     position: absolute;
     background: var(--BG);
-    z-index: 1;
+    z-index: 2;
     width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
     top: 6rem;
     display: flex;
-    justify-content: center;
   }
   .starling_nav_title {
     text-align: center;
@@ -125,6 +126,12 @@ main {
     text-align: center;
   }
   main {
-    margin-left: 2rem;
+    padding: 0 5%;
+    margin: 2rem 0;
+  }
+}
+@media only screen and (max-width: 480px) {
+  :root {
+    font-size: 8px;
   }
 }
