--- a/pages/style.css
+++ b/pages/style.css
@@ -38,7 +38,6 @@ main h1 {
 .code_wrapper {
   font-size: 1.4rem;
   overflow: auto;
-  width: 90%;
   margin: 3rem 0 4rem 0;
   background: var(--CARBON);
   border-radius: 8px;
@@ -82,6 +81,7 @@ main h1 {
 }
 .code_wrapper .code-toolbar .toolbar {
   opacity: 0.7;
+  z-index: 1;
 }
 .line-numbers span {
   display: revert;
@@ -157,7 +157,57 @@ pre b {
   padding: 1rem 1.5rem;
 }
 .sui_card_wrapper {
+  margin-top: 2rem;
   display: flex;
   flex-wrap: wrap;
+  gap: 2rem;
+}
+.sui_img_wrapper {
+  margin-top: 2rem;
+  display: flex;
+  gap: 10px;
+  background: #f6edff;
+  padding: 1rem;
+  border-radius: 8px;
+  box-shadow: 0 0 5px gray;
+  width: 100%;
+}
+@media only screen and (max-width: 768px) {
+  .sui_img_wrapper {
+    flex-direction: column;
+  }
+}
+.sui_img {
+  position: relative;
+}
+.sui_img::before {
+  position: absolute;
+  text-align: center;
+  color: gray;
+  left: 45%;
+  top: 5px;
+  padding: 5px;
+  border-radius: 5px;
+  opacity: 0.7;
+  background: var(--PRIMARY-BG);
+  box-shadow: 0 0 2px var(--BLACK-C);
+}
+.sui_img:nth-child(1)::before {
+  content: "default";
+}
+.sui_img:nth-child(2)::before {
+  content: "image fit";
+}
+.img_rnd.sui_img:nth-child(1)::before {
+  display: none;
+}
+.img_rnd.sui_img:nth-child(2)::before {
+  display: none;
+}
+.sui_input_wrapper {
+  width: 100%;
+  margin: 2rem 0;
+  display: flex;
+  flex-direction: column;
   gap: 2rem;
 }
